--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,8 @@
 
 .search__btn{
     position: absolute;
-    right: 0;
+    top: -1px;
+    right: -1px;
     width: 48px;
     height: 36px;
     line-height: 26px;
@@ -321,4 +322,51 @@
 
 .friendship-link__desc{
     margin-left: 4px;
+}
+
+.first-screen{
+    width: 1198px;
+    margin: 0 auto;
+}
+
+.recommend{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.home-slide{
+    width: 550px;
+    height: 242px;
+}
+
+.home-slide__img{
+    width: 100%;
+    height: 100%;
+}
+
+.rcmd-box-wrap{
+    width: 638px;
+    height: 242px;
+}
+
+.rcmd-box{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    width: 638px;
+    height: 242px;
+}
+
+.rcmd-item{
+    width: 206px;
+    height: 116px;
+    margin-bottom: 10px;
+    background-color: #00a1d6;
+}
+
+.footer{
+    width: 100%;
+    height: 900px;
 }
