--- a/css/style.css
+++ b/css/style.css
@@ -576,3 +576,48 @@
     width: 100%;
     height: 900px;
 }
+
+.contact{
+    position: fixed;
+    left: 0;
+    top: calc(50% - 30px);
+    width: 28px;
+    height: 72px;
+    line-height: 14px;
+    margin-top: -36px;
+    padding: 8px 7px;
+    font-size: 12px;
+    color: #505050;
+    background-color: #fff;
+    border: 1px solid #e7e7e7;
+    border-radius: 0 2px 2px 0;
+    box-shadow: 0 6px 10px 0 #e7e7e7;
+    box-sizing: border-box;
+}
+
+.global-index{
+    position: fixed;
+    top: 50%;
+    right: 40px;
+    transform: translate(0, -50%);
+}
+
+.global-index__list{
+    list-style: none;
+}
+
+.global-index__item{
+    display: block;
+    width: 54px;
+    height: 24px;
+    line-height: 24px;
+    font-size: 12px;
+    color: #505050;
+    text-align: center;
+    text-decoration: none;
+}
+
+.global-index .iconfont{
+    color: #505050;
+    font-size: 12px;
+}
